# homework_14.1

./: README.md  pyproject.toml
.github/workflows/: coverage.yml
htmlcov/: function_index.html
src/: category.py  exceptions.py  product.py  utils.py
tests/: test_category.py  test_product.py  test_utils.py
